@@ -433,6 +433,7 @@ class BinaryTest(TestBase, AssertsExecutionResults):
     def tearDownAll(self):
         binary_table.drop()
 
+    @testing.fails_on('mssql', 'MSSQl BINARY type right pads the fixed length with \x00')
     def testbinary(self):
         testobj1 = pickleable.Foo('im foo 1')
         testobj2 = pickleable.Foo('im foo 2')
